fixes tabs alignment for long tabs labels

--- a/assets/css/scss/woocommerce.scss
+++ b/assets/css/scss/woocommerce.scss
@@ -83,7 +83,8 @@
 		width: 100%;
 
 		@include media('>=phone') {
-			flex: 1;
+			display: flex;
+			flex: 1 1 auto;
 			max-width: 350px;
 		}
 
@@ -99,7 +100,14 @@
 			padding: 1rem;
 			text-align: center;
 			transition: all 300ms ease;
-			white-space: nowrap;
+			// white-space: nowrap;
+
+			@include media('>=phone') {
+				align-items: center;
+				display: flex;
+				flex: 1 1 auto;
+				justify-content: center;
+			}
 
 			@include media('>=tablet') { font-size: 22px; }
 		}
