--- a/assets/css/woocommerce-rtl.css
+++ b/assets/css/woocommerce-rtl.css
@@ -24,11 +24,13 @@
 
 .woocommerce div.product .woocommerce-tabs .nav-tabs > li { margin-bottom: 0; width: 100%; }
 
-@media (min-width: 768px) { .woocommerce div.product .woocommerce-tabs .nav-tabs > li { -webkit-box-flex: 1; -ms-flex: 1; flex: 1; max-width: 350px; } }
+@media (min-width: 768px) { .woocommerce div.product .woocommerce-tabs .nav-tabs > li { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-flex: 1; -ms-flex: 1 1 auto; flex: 1 1 auto; max-width: 350px; } }
 
 @media (min-width: 768px) { .woocommerce div.product .woocommerce-tabs .nav-tabs > li + li { margin-right: 5px; } }
 
-.woocommerce div.product .woocommerce-tabs .nav-tabs > li > a { border: 0 none; border-radius: 0; font-size: 16px; margin: 0; padding: 1rem; text-align: center; transition: all 300ms ease; white-space: nowrap; }
+.woocommerce div.product .woocommerce-tabs .nav-tabs > li > a { border: 0 none; border-radius: 0; font-size: 16px; margin: 0; padding: 1rem; text-align: center; transition: all 300ms ease; }
+
+@media (min-width: 768px) { .woocommerce div.product .woocommerce-tabs .nav-tabs > li > a { -webkit-box-align: center; -ms-flex-align: center; align-items: center; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-flex: 1; -ms-flex: 1 1 auto; flex: 1 1 auto; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; } }
 
 @media (min-width: 992px) { .woocommerce div.product .woocommerce-tabs .nav-tabs > li > a { font-size: 22px; } }
 
